assets/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    pointer-events: auto;
}

html {
    scroll-behavior: smooth;
    overflow-y: scroll;
}

:root {
    font-size: 16px;
    --color1: #000000;
    --color2: rgb(223, 223, 223);
    --color3: rgb(189, 189, 189);
    --font1: GapSans; 
    --font2: GapSansBold;
    --font3: DejaVuSans;
}

body{
    background-color: var(--color2);
    border: 2px solid black;
}

a{
    text-decoration: none;
    color: var(--color1);
}

li{
    list-style: none;
}

/*TEXT*/
article{
    display: flex;
}
.section-text {
    width: 50vw;
    padding: 2%;
    padding-top: 1%;
    height: 100vh;
    display: flex;
    flex-direction: column;
    overflow-y: scroll;
}

h1, p, h2, ul {
    font-family: var(--font1);
    color: var(--color1);
    font-style: normal;
}

h1 {
    font-size: 5rem;
    letter-spacing: 0.1rem;
    line-height: 0.9;
    font-family: var(--font2);
}

h2 {
    font-size: 1.4rem;
    padding-bottom: 1.3rem;
    padding-top: 1.5rem;
    margin-left: 1.5rem;
    letter-spacing: 0.12rem;
    hyphens: auto;
}

p {
    font-size: 1rem;
    line-height: 1.3;
    font-family: var(--font1), Arial, Helvetica, sans-serif;
    letter-spacing: .05rem;
    hyphens: auto;
}

.nowrap{
    hyphens: none;
    word-break: keep-all;
}

.link-section{
    width: 14vw;
    border-right: 4px solid var(--color1);
    height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow-y: scroll;
    padding: 7px;
}

.link-list{
    display: flex;
    flex-direction: column;
    gap: .4rem;
    margin-top: 1rem;
}

.container-link-list-item{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.link-list-item{
    letter-spacing: 0.05rem;
    width: 85%;
    text-align: center;
    border: 2px solid var(--color1);
    border-radius: 0.2rem;
    padding: 1.5%;
    /*
    border: 2.5px solid var(--color1);
    border-radius: .3rem;
    align-self: center;
    background-color: var(--color3);*/
}

.link-list-item:hover{
    background-color: var(--color3);
    border: 2px inset black;
}

.container-project-details{
    position: fixed;
    top: 0;
    left: 14vw;
    width: 50vw;
    height: 75vh;
    opacity: 0;
    transition: opacity 0.3s ease;
    margin: 0;
    padding: 2%;
    padding-top: 1%;
}

.container-link-list-item:hover + .container-project-details  {
    opacity: 1;
}

.container-body-text p:nth-child(n+2){
    text-indent: 1.5rem;
}

#detail-description p:nth-of-type(n+2) {
    text-indent: 1.5rem;
  }

.headline-projects{
    padding-bottom: 10px;
}

sup {
    font-size: 16%;
    word-break: none;
    text-transform: uppercase;
    margin-left: -12px;
    letter-spacing: 0.05rem;
    font-family: var(--font3), Arial, Arial, Helvetica, sans-serif;
    hyphens: none;
    word-break: keep-all;
}


/*IMAGES*/
.section-preview-images{
    display: flex;
    flex-direction: column;
    width: 32vw;
    height: 100vh;
    position: fixed;
    bottom: 0;
    right:0;
    align-items: flex-end;
    overflow-y: hidden;
    border: 2px solid black;
    overflow-y: hidden;
    scrollbar-width: 0;
}

.section-preview-images::-webkit-scrollbar {
    display: none;
}

.section-preview-images::-webkit-scrollbar {
    display: none;
  }

.container-images {
    display: flex;
    flex-direction: column;
    transition: transform 0.5s ease;
    will-change: transform;
  }

.container-images.paused {
    animation-play-state: paused;
}

.images-preview{
    width: 100%;
    height: auto;
    vertical-align: bottom;
    border: 2px solid black;
}

.images-preview:hover{
    border: 4px solid var(--color1);
}

@keyframes images-moving-up {
    0% {
        transform: translateY(0);
      }
      50% {
        transform: translateY(-95%);
      }
    100%{
        transform: translateY(0);
    }
}

.container-images:hover{
    animation-play-state: paused;
}

.container-project-details.visible {
    opacity: 1;
}

@media screen and (min-width: 1920px){
    :root{
        font-size: 24px;
    }
}

